force-app/main/default/objects/Expense__c/Expense__c.object-meta.xml
<CustomObject>
    <description>Use in Expense Manager App built using LWC OSS</description>
    <label>Expense</label>
    <nameField>
        <displayFormat>EXP-{0000}</displayFormat>
        <label>Expense Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>